[gd_scene load_steps=10 format=2]

[ext_resource path="res://binary/images/ui/barHorizontal_green.png" type="Texture" id=1]
[ext_resource path="res://res/chara/chamo_0.tres" type="SpriteFrames" id=2]
[ext_resource path="res://script/character.gd" type="Script" id=3]
[ext_resource path="res://script/fct_mgr.gd" type="Script" id=4]
[ext_resource path="res://binary/font/Minecraft.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://prefab/bullet.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 6.06565 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 36.375 )

[node name="root" type="KinematicBody2D" groups=["chara"]]
collision_mask = 2
script = ExtResource( 3 )
bullet_fab = ExtResource( 6 )
fct_mgr_path = NodePath("fct_mgr")

[node name="hp_bar" type="TextureProgress" parent="."]
margin_left = -51.0
margin_top = -120.0
margin_right = 49.0
margin_bottom = -112.0
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 1 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1

[node name="up_shot" type="Position2D" parent="."]
position = Vector2( 0, -65 )

[node name="image" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 2 )
animation = "stand_front"
playing = true
offset = Vector2( 0, -23 )

[node name="down_shot" type="Position2D" parent="."]
position = Vector2( 0, -10 )

[node name="right_shot" type="Position2D" parent="."]
position = Vector2( 34, -39 )

[node name="left_shot" type="Position2D" parent="."]
position = Vector2( -30, -40 )

[node name="col_floor" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -3.93435 )
shape = SubResource( 1 )

[node name="fct_mgr" type="Node2D" parent="."]
position = Vector2( 0, -94 )
script = ExtResource( 4 )

[node name="name_board" type="Label" parent="."]
margin_left = -55.0
margin_top = -111.0
margin_right = 51.0
margin_bottom = -79.0
rect_pivot_offset = Vector2( 58, -5.99999 )
custom_fonts/font = SubResource( 3 )
text = "chamo"
align = 1

[node name="col_body" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="col_body"]
position = Vector2( 1, -36.625 )
shape = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_root_input_event"]
[connection signal="input_event" from="col_body" to="." method="_on_col_body_input_event"]
